--- a/app/src/app/globals.css
+++ b/app/src/app/globals.css
@@ -25,3 +25,21 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+@layer components {
+  .form {
+    @apply bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4;
+  }
+  .label {
+    @apply block text-gray-700 text-sm font-bold mb-2;
+  }
+  .input {
+    @apply shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:ring-2;
+  }
+  .form_footer {
+    @apply flex items-center justify-between;
+  }
+  .btn {
+    @apply bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:ring-2;
+  }
+}
