--- a/app/src/app/globals.css
+++ b/app/src/app/globals.css
@@ -36,8 +36,8 @@ body {
   .input {
     @apply shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:ring-2;
   }
-  .form_footer {
-    @apply flex items-center justify-between;
+  .result {
+    @apply mt-4;
   }
   .btn {
     @apply bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:ring-2;
